@@ -13,6 +13,12 @@ Core and Builtins
 Library
 -------
 
+- Issue #22570: Add 'path' attribute to pathlib.Path objects,
+  returning the same as str(), to make it more similar to DirEntry.
+  Library code can now write getattr(p, 'path', p) to get the path as
+  a string from a Path, a DirEntry, or a plain string.  This is
+  essentially a small one-off protocol.
+
 - Issue #26012: Don't traverse into symlinks for ** pattern in
   pathlib.Path.[r]glob().
 
